update readme: remove maven build instructions